fix horizontal scrolling on home page

--- a/src/app/core/layout/footer/footer.component.scss
+++ b/src/app/core/layout/footer/footer.component.scss
@@ -12,7 +12,7 @@
       margin-bottom: 4rem;
       padding: 3rem 1.5rem;
 
-      @media (min-width: 768px) {
+      @media (min-width: 1024px) {
         grid-template-columns: 2fr 1fr 1fr 1.5fr;
         gap: 4rem;
       }
